--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<link rel="stylesheet" href="card--dashboard.css">
-<div class="ts-card-dashboard">
-    <h1 class="ts-card_title">Projeto Alpha</h1>
-    <div class="ts-tag--client">
-        <span class="ts-client">ahgora sistemas</span>
+<link rel="stylesheet" href="entry--timer.css">
+<div class="ts-timer--field">
+    <input type="text" class="ts-input--time-desc" placeholder="O que você fez hoje?">
+    <div class="ts-input--timer-icons">
+        <span class="ts-input--tag-icon">•</span>
+        <span class="ts-input--tag-icon">•</span>
+        <span class="ts-input--tag-icon">•</span>
     </div>
-    <div class="ts-worked--hours">
-        <span class="ts-number--hours">1000</span>
-        <p class="ts-label--hours">Horas trabalhadas</p>
+    <div class="ts-input--time-hours">
+        <input type="date" class="ts-input--date">
+        <input type="time" class="ts-input--hour">        
+        <span class="ts-input--timer-divider"></span>
+        <input type="time" class="ts-input--hour">
     </div>
-    <span class="ts-card--divisor"></span>
-    <div class="ts-appointment--hours">
-        <span class="ts-number--hours">8</span>
-        <p class="ts-label--hours">Horas apontadas</p>
+    <div class="ts-input--add">
+        <button class="ts-input--add-time-entry">+</button>
     </div>
 </div>
